--- a/modules/documents/client/styles/pdf-viewer.scss
+++ b/modules/documents/client/styles/pdf-viewer.scss
@@ -47,6 +47,11 @@
 			border-color: $brand-primary;
 		}
     }
+    .download {
+      /*  Match the padding on the btn.close element so the download link is aligned with the close button
+      */
+      padding:0.7rem;
+    }
 
     .loading-indicator {
         position: fixed;
@@ -143,99 +148,4 @@
 	.document-viewer-footer {
 		padding: 1.25rem 1.5rem;
 	}
-}
-
-/* SPINNER */
-
-$width: 50px;
-
-// demo-specific
-.showbox {
-	position: absolute;
-  	top: 0;
-  	bottom: 0;
-  	left: 0;
-  	right: 0;
-  	padding: 5%;
-}
-// end demo-specific
-
-
-
-.loader {
-  	position: absolute;
-  	top: 50%;
-	left: 50%;
-  	margin-top: -25px;
-  	margin-left: -25px;
-  	width: $width;
-	opacity: 0;
-  	&:before {
-    	content: '';
-    	display: block;
-    	padding-top: 100%;
-  	}
-	transition: all ease-out 0.2s;
-	
-	&.show-loader {
-		opacity: 1;
-	}
-}
-
-.circular {
-  	animation: rotate 2s linear infinite;
-  	height: 100%;
-  	transform-origin: center center;
-  	width: 100%;
- 	position: absolute;
-  	top: 0;
-  	bottom: 0;
-  	left: 0;
-  	right: 0;
-  	margin: auto;
-}
-
-.path {
-  	stroke-dasharray: 1, 200;
-  	stroke-dashoffset: 0;
-  	animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
-  	stroke-linecap: round;
-}
-
-@keyframes rotate {
-  	100% {
-    	transform: rotate(360deg);
-  	}
-}
-
-@keyframes dash {
-  	0% {
-    	stroke-dasharray: 1, 200;
-    	stroke-dashoffset: 0;
-  	}
-  	50% {
-    	stroke-dasharray: 89, 200;
-    	stroke-dashoffset: -35px;
-  	}
-  	100% {
-    	stroke-dasharray: 89, 200;
-    	stroke-dashoffset: -124px;
-  	}
-}
-
-@keyframes color {
-  	100%,
-  	0% {
-    	stroke: #fff;
-  	}
-  	40% {
-    	stroke: #fff;
-  	}
-  	66% {
-    	stroke: #fff;
-  	}
-  	80%,
-  	90% {
-    	stroke: #fff;
-  	}
 }
