--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -1,10 +1,11 @@
 
-<div class="view-title-container">
-	<h1>Documents</h1>
+<div class="view-title-container flex-row">
+	<button class="btn icon-btn side-toggle-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
+	<h1>Documents Blah</h1>
 	<!-- <tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear> -->
 </div>
 
-<div class="view-body-container">
+<div class="view-body-container documents">
 	<tmpl-documents-browser class="anchor-section"
 		id="anchor-documents"
 		x-approvals="false"
