MEM-329 Progress commit
- Adding module-specific styling (header.scss, project-comments.scss)
- Removing module specific styling from core.scss
- Adding the sidenav overlay to project.abstract.html (clickable element to close sidenav)
- Removing the EOA specific column from projects-list.html / fixing whitespace
- Removed unused DIV from projects.abstract.html
- Updated selector / layout for user-activities.html. Removed EOA specific messages from the table.

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1396,59 +1396,6 @@ h2.page-title {
 	right: 15px;
 }
 
-
-/* APPLICATION LAYOUT 
------------------------------- */
-tmpl-header,
-tmpl-footer {
-	display: block;
-	flex: 0 0 auto;
-}
-
-.app-main {
-	.left-panel,
-	.main-panel {
-		display: -webkit-flex;
-		display: flex;
-		flex-flow: column nowrap;
-	}
-
-	.main-panel {
-		position: relative;
-		/* Need to set 1px here to fix some flexbox issues with text wrapping */
-		flex: 1 1 1px;
-		min-width: 0;
-
-		.view-title-container {
-			flex: 0 0 auto;
-			z-index: 1;
-		}
-
-		.view-body-insert {
-			flex: 0 0 auto;
-		}
-
-		.view-body-container {
-			flex: 1 1 auto;
-		}
-
-		.view-footer-container {
-			flex: 0 0 auto;
-		}
-	}
-}
-
-ui-view {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	display: -webkit-flex;
-	display: flex; 
-	flex-flow: column nowrap;
-}
-
 /* PAGE (VIEW) CONTAINERS
 ------------------------------ */
 .view-body-container,
@@ -1670,261 +1617,6 @@ ui-view {
     }
 
 }
-
-
-/* HEADER 
------------------------------- */
-$header-height: 6.2rem;
-$header-height-sm: 5.2rem;
-
-.app-header {
-	position: relative;
-	margin-bottom: 0;
-	height: $header-height-sm;
-	min-height: $header-height-sm;
-	background-color: $corp-blue;
-	border-bottom: 2px solid $corp-gold;
-	
-	.navbar {
-		border: none;
-		border-radius: 0;
-	}
-	
-	.navbar-header {
-		float: left;
-	}
-	
-	.navbar-brand {
-		padding: 0;
-		width: 116px;
-		overflow: hidden;
-
-		a {		
-			text-decoration: none;	
-			border: 1px solid transparent;
-		}
-
-		img {
-			margin-top: 4px;
-			height: 42px;
-		}
-	}
-	
-	.navbar-nav {
-		margin: 0;
-		float: right;
-		
-		> li {
-			width: 4rem;
-			display: inline-block;
-		}
-		
-		> li > a {
-			width: 4rem;
-			height: 4rem;
-			overflow: hidden;
-		}
-		
-		.glyphicon {
-			color: #FFF;
-			
-			+ span {
-				display: none;
-			}
-		}
-	}
-}
-
-@media (min-width: 480px) {
-	.app-header {
-		.navbar-brand {
-			width: auto;
-		}
-	}
-}
-
-@media (min-width: 900px) {
-	.app-header {
-		height: $header-height;
-		
-		.navbar {
-			height: $header-height;
-			margin: 0;
-		}
-
-		.navbar-brand {
-			img {
-				margin-top: 2px;
-				height: 55px;
-			}
-		}
-		
-		.navbar-nav {
-			margin: 1rem;
-			float: right;
-			
-			> li > a,
-			> li > a:hover,
-			> li > a:focus {
-				padding: 1rem 1.5rem;
-				color: #FFF;
-				border: none;
-				background: transparent;
-			}
-		}
-		
-		.nav {
-			> .open > a,
-			> .open > a:hover,
-			> .open > a:focus {
-				background: transparent;
-			}
-		}
-		
-		.dropdown-menu {
-			border-radius: 0;
-		}
-		
-		.vert-pipe {
-			border-left: 1px solid #FFF;
-			height: 2.5rem;
-			margin-top: 0.7rem;
-			opacity: 0.5;
-			margin-left: 1rem;
-			margin-right: 1rem;
-		}
-		
-		.user-menu {
-			margin-right: 1rem;
-		}
-	}
-}
-
-
-/* CUSTOM NAV
------------------------------- */
-.custom-nav {
-	float: right;
-	margin-top: 0.7rem;
-	margin-right: 1rem;
-	margin-left: 1rem;
-	margin-bottom: 0;
-	padding: 0;
-	list-style-type: none;
-	
-	.custom-nav-item {
-		display: inline-block;
-		
-		a {
-			display: block;
-			min-width: 3.75rem;
-			padding: 0.75rem 0;
-			font-size: 1.3rem;
-			color: #FFF;
-			text-align: center;
-			text-decoration: none;
-			border: 1px solid transparent;
-			border-radius: 0.4rem;
-
-			&:focus {
-				border: 1px solid $header-focus-border-color;
-			}
-		}
-
-		.glyphicon {
-			+ span {
-				display: none;
-			}
-		}
-	}
-	
-	.dropdown-menu {
-		margin-top: 1.5rem;
-		padding: 0;
-		border: none;
-		border-radius: 0;
-		background: #FFF;
-		
-		li {
-			display: block;
-			
-			a {
-				padding: 0.7rem 1.5rem;
-				font-size: 1.3rem;
-				color: #003366;
-				text-align: left;
-				border: 1px solid transparent;
-				border-radius: 0;
-
-				&:focus {
-					text-shadow: 1px 1px #FFF;
-					border: 1px solid transparent;
-				}
-			}
-
-			.glyphicon {
-				display: table-cell;
-
-				+ span {
-					display: table-cell;
-					padding-left: 1rem;
-				}
-			}
-		}
-	}
-	
-	.open {
-		.dropdown-toggle {
-			background: #1c2b4f;
-			box-shadow: 0 0 1rem #11203a inset;
-		}
-	}
-	
-	.dashboard-item {
-		margin-right: 0.4rem;
-	}
-}
-
-@media (min-width: 900px) {
-	.custom-nav {
-		float: right;
-		margin-top: 1.3rem;
-		margin-right: 1rem;
-		margin-left: 1rem;
-		margin-bottom: 0;
-		
-		.custom-nav-item {
-			display: inline-block;
-			
-			a {
-				display: block;
-				padding: 0.75rem;
-				color: #FFF;
-				text-decoration: none;
-			}
-
-			.glyphicon {
-				display: none;
-				
-				+ span {
-					display: inline;
-				}
-			}
-		}
-		
-		.dropdown-menu {
-			margin: 0;
-			border: none;
-			border-radius: 0;
-			background: #FFF;
-		}
-		
-		.dashboard-item {
-			margin-right: 0;
-		}
-	}
-}
-
 
 /* SIDE NAVIGATION
 ------------------------------ */
@@ -3212,267 +2904,6 @@ section {
 	}
 }
 
-
-/* CONDITIONS VIEW
------------------------------- */
-.project-conditions-view {
-	.table {
-		th:last-child {
-			width: 6rem;
-			text-align: right;
-		}
-	}
-}
-
-
-/* COMMENT PERIOD VIEW 
------------------------------- */
-.pcp-table {
-	table-layout: fixed;
-
-	.pcp-count {
-		width: 10rem;
-	}
-}
-
-.pcp-comment-count-label {
-	display: inline-block;
-	margin-top: 0.8rem;
-	font-weight: bold;
-}
-
-.pcp-pillar-vc-list {
-	.vc-details {
-		-webkit-flex: 1 1 auto;
-		flex: 1 1 auto;
-
-		span {
-			font-style: italic;
-		}
-
-		.pillars {
-			display: block;
-			margin-bottom: 0.5rem;
-		}
-	}
-
-	.vc-actions {
-		-webkit-flex: 0 0 auto;
-		flex: 0 0 auto;	
-	}
-
-	label {
-		display: block;
-		margin-bottom: 0;
-	}
-	
-	.value {
-		color: #888;
-	}
-}
-
-.open-house {
-	margin-top: -0.5rem;
-
-	label {
-		padding: 0.5rem 0;
-	}
-
-	.open-house-date {
-		display: block;
-		margin-bottom: 0.2rem;
-	}
-
-	.open-house-desc {
-		color: $font-color-grey;
-	}
-}
-
-.public-comment-period-view {
-	/* Fix - We need to absolutely position this because of the inception of DIV's required here */
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-
-	.nav-tabs {
-		li {
-			margin-top: 0.5rem;
-		}
-	}
-	
-	.comment-row {
-		background: #FFF;
-	}
-	
-	.tab-pane {
-		position: relative;
-	}
-	
-	.pcp-btn-bar {
-		h2 {
-			font-size: 2rem;
-			font-weight: bold;
-			margin-top: 0.8rem;
-			margin-bottom: 0;
-		}
-	}
-}
-
-@media (max-width: 1200px) {
-	.public-comment-period-view {
-		.tab-pane {
-			.pcp-button-bar {
-				top: -5.5rem;
-			}
-		}
-	}
-}
-
-@media (min-width: 1200px) {
-	.public-comment-period-view {
-		.tab-pane {
-			.pcp-button-bar {
-				position: absolute;
-				top: -5.5rem;
-				right: 0;
-			}
-		}
-	}
-}
-
-.public-comment-modal {
-	h4 {
-		margin-top: 0;
-		font-weight: bold;
-	}
-	
-	p {
-		margin: 1.5rem 0;
-		line-height: 2rem;
-		
-		a {
-			text-decoration: underline;
-		}
-	}
-	
-	.control-label,
-	.comment-opt-in label {
-		font-weight: bold;
-		text-shadow: 0 0 1px #FFF;
-	}
-	
-	.comment-opt-in {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-		
-		+ .help-block {
-			margin-top: 0.25rem;
-			font-size: 1.3rem;
-			color: #999;
-			text-shadow: 0 0 1px #FFF;
-		}
-	}
-
-	.comment-review-btns {
-		-webkit-flex: 0 0 auto;
-		flex: 0 0 auto;
-
-		.defer-btn,
-		.publish-btn,
-		.reject-btn {
-			text-shadow: 1px 1px 0 #FFF;
-
-			&.active {
-				color: #FFF;
-				text-shadow: none;
-			}
-		}
-
-		.defer-btn {
-			&.active {
-				background: $info-bg;
-				border-color: $info-border;
-			}
-		}
-
-		.publish-btn {
-			&.active {
-				background: $success-bg;
-				border-color: $success-border;
-			}
-		}
-
-		.reject-btn {
-			&.active {
-				background: $danger-bg;
-				border-color: $danger-border;
-			}
-		}
-	}
-
-	.comment-author-info {
-		margin-bottom: 1rem;
-
-		.author {
-			font-size: 1.4rem;
-		}
-
-		.date {
-			display: block;
-			color: $font-color-grey;
-		}
-	}
-
-	.comment-body {
-		margin: 0;
-		max-height: 40rem;
-		overflow-y: auto;
-
-		pre {
-			padding: 1.5rem;
-			overflow-x: hidden;
-		}
-	}
-
-	.comment-attachments {
-		.comment-review-btns {
-			-webkit-flex: 0 0 auto;
-			flex: 0 0 auto;
-			padding-right: 0.5rem;
-
-			.btn {
-				margin-top: 0.5rem;
-				min-width: 7rem;
-			}
-		}
-	}
-
-	.comment-alert {
-		margin-bottom: 2rem;
-		display: none;
-	}
-
-	.eao-comment-review {
-		.form-group {
-			margin-bottom: 2.5rem;
-
-			&:last-child {
-				margin-bottom: 0;
-			}
-		}
-
-		.comment-review-btns {
-			.btn {
-				min-width: 10rem;
-				padding-top: 0.7rem;
-			}
-		}
-	}
-}
-
-
 /* COMPLAINTS VIEW
 ------------------------------ */
 .complaints-view {
@@ -4309,27 +3740,6 @@ tmpl-template-render {
 	}
 }
 
-/* UPLOAD DOCUMENTS VIEW
------------------------------ */
-.upload-documents-view {
-	position: relative;
-
-	.list-group {
-		margin-top: 1.5rem;
-	}
-
-	.loader-overlay {
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		background: red;
-		opacity: 0.5;
-		z-index: 999;
-	}
-}
-
 
 /* USER PROFILE VIEW 
 ----------------------------- */
@@ -4348,7 +3758,6 @@ tmpl-template-render {
 		margin-top: 1rem;
 	}
 }
-
 
 
 /* VALUED COMPONENTS VIEW
@@ -4460,6 +3869,7 @@ tmpl-template-render {
 // GLOBAL
 @import "modules/core/client/scss/global/mixins.scss";
 @import "modules/core/client/scss/global/helpers.scss";
+@import "modules/core/client/scss/global/header.scss";
 @import "modules/core/client/scss/global/footer.scss";
 @import "modules/core/client/scss/global/layout.scss";
 
@@ -4474,6 +3884,7 @@ tmpl-template-render {
 @import "modules/core/client/scss/components/ng-table-overrides.scss";
 
 // MODULES
+//@import "modules/project-comments/client/scss/project-comments.scss";
 @import "modules/project-conditions/client/scss/project-conditions.scss";
 @import "modules/projects/client/scss/project-timeline.scss";
 @import "modules/projects/client/scss/projects-abstract.scss";
@@ -4481,7 +3892,6 @@ tmpl-template-render {
 //@import "modules/codelists/client/scss/codelist.scss";
 //@import "modules/communications/client/scss/communications.scss";
 //@import "modules/invitations/client/scss/invitations.scss";
-//@import "modules/project-comments/client/scss/project-comments.scss";
 //@import "modules/users/client/scss/user-entry.scss";
 //@import "modules/users/client/scss/user-search-chooser.scss";
 //@import "modules/vcs/client/scss/vc-list.scss";
