--- a/modules/projects/client/scss/projects-abstract.scss
+++ b/modules/projects/client/scss/projects-abstract.scss
@@ -3,24 +3,8 @@
 	padding: 2rem;
 	overflow-y: auto;
 
-	.angular-google-map-container {
-		height: 400px;
-	}
-
+	.angular-google-map-container,
 	.news-feed {
-		@extend .flex-column;
-		margin-right: -1rem;
-		height: 445px;
-
-		.panel-heading,
-		.panel-footer {
-			@include flex(0 0 auto);
-		}
-
-		.panel-body {
-			@include flex(1 1 auto);
-			overflow-y: scroll;
-			overflow-x: hidden;
-		}
+		height: 400px;
 	}
 }
